--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,13 +3,22 @@
 }
 
 .titulo-pagina{
-    font-size: 1.5rem;
+    font-size: 1.625rem;
     font-weight: 700;
+    
+}
+
+.titulo-pagina__segundario{
+    font-size: 1.125rem;
+    font-weight: 700;
+    margin-top: 32px;
+    
 }
 
 .cartao{
     width: 100%;
     border-radius: 15px;
+    margin-top: 16px;
     background-color: #2c343a;
     overflow: hidden;
     
@@ -18,11 +27,9 @@
 .cartao__conteudo{
     display: grid;
     gap: 8px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr ;
 
-    padding: 16px;
-    
-    
+    padding: 16px;     
 }
 
 .cartao__titulo{
@@ -30,6 +37,10 @@
     font-weight: 700;
 
     grid-column: span 2;
+}
+
+.cartao__titulo--comprar{
+    margin-bottom: 16px;
 }
 .cartao__perfil{
     color: #95999c;
@@ -57,6 +68,13 @@
     margin-right: 8px;
 }
 
+.cartao__info--valor::before{
+    content:  "\e905";
+
+    margin-right: 8px;
+}
+
+
 .cartao__botao{
     display: flex;
     justify-content: center;
@@ -72,6 +90,7 @@
 
 }
 
+
 .cartao__botao--play:before{
     content: "\e90b";
     font-size: 24px;
@@ -85,7 +104,15 @@
 
 }
 
+.cartao__botao--comprar:before{
+    content: "\e901";
+
+    font-size: 24px;
+}
+
 .cartao__botao--destaque::before{
     margin-right: 8px;
 }
+
+
 
